# openwrt

package/base-files/files/etc/: profile
package/libs/libubox/patches/: 001-support-for-lua53.patch
package/network/utils/iwinfo/patches/: 001-support-for-lua53.patch
package/system/ubus/patches/: 001-support-for-lua53.patch
package/utils/lua/: Makefile
package/utils/lua/patches/: 100-no_readline.patch
package/utils/lua/patches-host/: 100-no_readline.patch
package/uwrt/uvhttpd/: Makefile
package/uwrt/uvhttpd/files/etc/config/: uvhttpd
package/uwrt/uvhttpd/files/etc/init.d/: uvhttpd
package/uwrt/uvhttpd/src/: CMakeLists.txt  base64.c  base64.h  cfg.c  cfg.h  rbtree.c  rbtree.h  session.c  session.h  sha1.c  sha1.h  utils.c  utils.h  uvhttpd.c  webctx.c  webctx.h  webrequest.c  webrequest.h  webserver.c  webserver.h  websocket.c  websocket.h
